--- a/wp-content/themes/newtheme/style.css
+++ b/wp-content/themes/newtheme/style.css
@@ -5,7 +5,7 @@ Description: краткое-описание-темы
 Author: ваше-имя
 Author URI: http://kps-dev.com
 Version: номер-версии--необязательное-поле
-.
-Развёрнутое описание темы/Лицензия-если-нужно.
-.
+Template: ionmag
 */
+
+@import url('../ionMag/style.css');
